# BearCAD

./: .gitignore  .gitmodules  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  TODO.md  build.rs  plan.md
.github/workflows/: ci.yml  docs.yml  occt-prebuilt.yml
changes/: break-Screenshots-are-by-20260620-231423.md  break-bearcadpin-text-is-removed-20260717-120120.md  fix-Angle-constraints-honor-20260721-223056.md  fix-Angle-dim-Enter-20260721-235748.md  fix-Angle-dimensions-editable-20260630-113718.md  fix-Angle-dimensions-now-20260630-153604.md  fix-Angle-edit-places-20260721-225438.md  fix-Auto-zoom-is-calmer-20260718-233117.md  fix-Body-icon-is-20260630-153755.md  fix-CI-interaction-tests-20260722-001202.md  fix-Circle-tool-the-20260724-150645.md  fix-Clicking-a-face-20260716-092406.md  fix-Command-palette-keeps-20260629-233824.md  fix-Component-icon-is-20260717-162921.md  fix-Constraint-pane-reasons-20260716-112446.md  fix-Context-pane-fields-20260716-091638.md  fix-Curve-handles-highlight-20260721-101531.md  fix-Curved-bezier-lines-20260702-010136.md  fix-Cut-icon-shows-20260721-110725.md  fix-Deleting-an-offset-20260721-225156.md  fix-Dimension-label-text-20260717-235934.md  fix-Dimension-label-text-20260718-002448.md  fix-Dimension-tool-only-20260721-234326.md  fix-Dimensioned-but-unpinned-sketch-shapes-20260718-231955.md  fix-Docs-fix-stale-20260707-085641.md  fix-Docs-site-favicon-20260717-162901.md  fix-Docs-tool-icons-20260718-113100.md  fix-Docs-tool-table-icons-20260718-124444.md  fix-Dont-steal-keyboard-20260721-231101.md  fix-Dragging-a-rectangle-20260629-233250.md  fix-Drawings-a-body-20260716-000312.md  fix-Drawings-a-diagonal-20260715-234340.md  fix-Drawings-an-aligned-20260716-004254.md  fix-Drawings-the-Parameters-20260716-000124.md  fix-Drawings-the-editor-20260716-005405.md  fix-Drawings-view-cards-20260715-234611.md  fix-Drawings-with-the-20260715-235755.md  fix-Ear-clip-triangulation-for-20260630-165008.md  fix-Elements-graph-dragging-20260724-151018.md  fix-Export-Session-Commands-20260630-192100.md  (+197 more)
cpp/: bearcad_kernel.cpp  bearcad_kernel.hpp  bearcad_lua.cpp  bearcad_slvs.cpp
docs-site/: README.md  docusaurus.config.js
docs-site/docs/: command-palette.md  components.md  files.md  intro.mdx  navigation.md  parameters.md  quickstart.md  selection-exploder.md  styles.md
docs-site/screenshots/: aligned-views.lua  chamfer-sketch.lua  chamfer.lua  circle.lua  combine.lua  command-palette.lua  constraint.lua  construction-plane.lua  dimension.lua  drawing.lua  elements-pane.lua  exploder.lua  extrude.lua  fillet-sketch.lua  fillet.lua  follow-path.lua  letter-b.lua  loft.lua  move.lua  offset.lua  (+9 more)
examples/: export_step.lua  export_stl.lua  line.le3script  line.lua  rectangle.le3script  rectangle.lua
scripts/: README.md  build-lua-wasm.sh  build-occt-wasm.sh  build-occt.ps1  build-occt.sh  build-web.sh  gen-doc-screenshots.sh  generate-macos-icns.sh  le3-issue-handler.sh  le3-monitor.sh  package-release.sh  prune-draft-releases.sh
src/: actions.rs  app_icon.rs  camera.rs  cli_install.rs  command_log.rs  command_palette.rs  constraint_viewport.rs  constraints.rs  construction.rs  context.rs  dimensions.rs  document_health.rs  document_lifecycle.rs  drawing.rs  element_picker.rs  expression_input.rs  extrude.rs  face.rs  fps.rs  geometric_constraints.rs  gif_recorder.rs  hierarchy.rs  icons.rs  lua_script.rs  main.rs  menu_command.rs  model.rs  names.rs  native_menu.rs  offset.rs  parameters.rs  polygon.rs  polygon_boolean.rs  projection.rs  release_artifacts.rs  script.rs  script_json.rs  selection.rs  shortcuts.rs  snapping.rs  (+14 more)
web/: index.html  kernel-bridge.js  lua-bridge.js
(+70 files in other folders)
