[package]
name = "bearcad"
version = "0.1.0"
edition = "2021"
description = "BearCAD — on-device parametric CAD (early prototype)"
repository = "https://github.com/iffy/BearCAD"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bearcad"
path = "src/main.rs"

[features]
# The OCCT geometry kernel (#86/#89) is ON by default so the normal `cargo build`
# / `cargo run` ships the real kernel (solid booleans/cut, true BREP fillets,
# curved-surface STEP). Building it needs a C++ toolchain + a built OCCT (see
# README.md "Building with the OCCT kernel"); to build the lean no-kernel fallback
# instead — no C++ toolchain, no OCCT — use `--no-default-features` (this is what
# the Windows release and the fast CI check do). See SPEC.md §10.
default = ["occt"]
# EXPERIMENT (slvs-solver branch): replace the hand-rolled sketch constraint solver
# with SolveSpace's libslvs (third_party/solvespace, compiled by build.rs). Native-only.
slvs = []
# Statically link the OpenCASCADE (OCCT) geometry kernel.
occt = []

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
# Compiles the C++ FFI shim (cpp/bearcad_kernel.cpp) only when the `occt` feature
# is on; unused otherwise. Small, so kept as an unconditional build-dep.
cc = "1"

[dependencies]
# wgpu backend (Metal on macOS) per SPEC §1; the default glow/OpenGL backend
# crashes with a bus error on some macOS setups.
eframe = { version = "0.32", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
egui = "0.32"
# eframe's `wgpu` feature only pulls in the `wgpu` crate — it doesn't select a backend.
# That used to come transitively via egui-wgpu's own `default` feature, which we don't
# get since eframe is `default-features = false` above; without it wgpu has no backend
# (metal/vulkan/dx12/gles) compiled in and panics at startup. Depend on `wgpu` directly
# with its own default backends (unifies with eframe's copy via Cargo feature unification).
wgpu = "25"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
image = "0.25"
base64 = "0.22"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
bytemuck = { version = "1", features = ["derive"] }

# Native-only: bundled C code (SQLite, Lua) doesn't build for wasm32-unknown-unknown.
# The web build saves/loads the JSON document format instead (storage::to_json_bytes)
# and ships without the Lua scripting runtime.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
# std::time::Instant panics on wasm; this is the drop-in replacement.
web-time = "1"
# WebGL fallback so browsers without WebGPU still render.
wgpu = { version = "25", features = ["webgl"] }
console_error_panic_hook = "0.1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.muda]
version = "0.19"
default-features = false
# Linux/BSD need the gtk backend compiled in; macOS/Windows ignore this feature.
features = ["gtk"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.raw-window-handle]
version = "0.6"

[target.'cfg(target_os = "macos")'.dependencies.winit]
version = "0.30"
default-features = false

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
